# claude8code

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.mcp-example.yml  docker-compose.observability.yml  docker-compose.yml  entrypoint.sh  loki-config.yml  main.py  prometheus.yml  promtail-config.yml  pyproject.toml  pyrightconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  integration.yml  release.yml  test.yml
docs/: agent-sdk-usage.md  ccproxy-feature-analysis.md
grafana/provisioning/dashboards/: claude8code.json  dashboards.yml  tool-invocations.json
grafana/provisioning/datasources/: loki.yml  prometheus.yml
settings/: __init__.py  settings.toml
src/: __init__.py  main.py
src/api/: __init__.py  app.py  middleware.py  routes.py  security.py  streaming.py
src/claude8code/: __init__.py  access_log.py  bridge.py  config.py  context.py  main.py  mcp_tools.py  metrics.py  middleware.py  models.py  security.py  server.py  session_pool.py  streaming.py
src/core/: __init__.py  access_log.py  config.py  metrics.py  structured_logging.py  tool_observability.py
src/models/: __init__.py  batches.py  errors.py  files.py  requests.py  responses.py  streaming.py
src/sdk/: __init__.py  batch_processor.py  bridge.py  file_store.py  hooks.py  mcp_tools.py  session_pool.py  tokenizer.py  workspace.py
tests/: __init__.py  conftest.py  test_bridge.py  test_integration.py  test_models.py  test_server.py
tests/fixtures/: __init__.py  sample_requests.py  sample_responses.py
tests/integration/: __init__.py  test_session_flow.py  test_streaming.py
tests/unit/: __init__.py  test_access_log.py  test_app.py  test_batch_processor.py  test_bridge.py  test_context.py  test_file_store.py  test_hooks.py  test_mcp_tools.py  test_metrics.py  test_middleware.py  test_models_batches.py  test_models_files.py  test_routes.py  test_security.py  test_session_pool.py  test_streaming.py  test_structured_logging.py  test_tokenizer.py  test_tool_observability.py  test_workspace.py
