[project]
name = "claude8code"
version = "0.1.0"
description = "Anthropic-compatible API server powered by Claude Code SDK - use your Max subscription with n8n"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [{ name = "krisjobs" }]
keywords = ["claude", "anthropic", "n8n", "proxy", "claude-code", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "claude-agent-sdk>=0.1.18",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sse-starlette>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Optional features with graceful degradation
metrics = ["prometheus-client>=0.21.0"]
analytics = ["duckdb>=1.0.0"]
logging = ["structlog>=24.0.0"]
tokenizer = ["tiktoken>=0.7.0"]
# Install all optional features
all = [
    "prometheus-client>=0.21.0",
    "duckdb>=1.0.0",
    "structlog>=24.0.0",
    "tiktoken>=0.7.0",
]
# Development dependencies
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pyright>=1.1.0",
    "prometheus-client>=0.21.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
claude8code = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100
# Include all Python files in the project
include = ["src/**/*.py", "tests/**/*.py", "main.py", "settings/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src", "tests", "main.py", "settings"]
# Ignore missing imports for optional/third-party packages without stubs
ignore_missing_imports = true
# Don't warn about unused type: ignore comments (they're needed when imports exist)
warn_unused_ignores = false
# Per-module overrides for test files (less strict)
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
# MCP tools use untyped decorators from claude_agent_sdk
[[tool.mypy.overrides]]
module = "src.sdk.mcp_tools"
disallow_untyped_decorators = false
# Settings uses pydantic-settings which may not have stubs
[[tool.mypy.overrides]]
module = "settings.*"
disallow_subclassing_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
fail_under = 60
